# cheshire-cat-ai-core

./: .env.example  .gitignore  Dockerfile  README.md  V2_DEV_NOTES.md  compose.yml  install_plugin_dependencies.py  pyproject.toml
core/: Dockerfile  entrypoint.sh  pyproject.toml
core/cat/: headers.py  main.py
core/cat/factory/: authorizator.py  custom_authorizator.py
core/cat/looking_glass/: agent_manager.py  cheshire_cat.py  prompts.py
core/cat/memory/: working_memory.py
core/cat/routes/: plugins.py
core/cat_typings/cat/: env.pyi  log.pyi  rabbit_hole.pyi  utils.pyi
core/cat_typings/cat/agents/: __init__.pyi  base_agent.pyi  form_agent.pyi  main_agent.pyi  memory_agent.pyi  procedures_agent.pyi
core/cat_typings/cat/auth/: auth_utils.pyi  connection.pyi  permissions.pyi
core/cat_typings/cat/convo/: messages.pyi
core/cat_typings/cat/db/: crud.pyi  database.pyi  models.pyi
core/vscode_settings/: settings.json
src/cat/: env.py  log.py  main.py  startup.py  utils.py
src/cat/agents/: __init__.py  base_agent.py  main_agent.py  memory_agent.py  procedures_agent.py  simple_agent.py
src/cat/auth/: base_auth_handler.py  connection.py  permissions.py
src/cat/convo/: messages.py
src/cat/core_plugins/why/: why.py
src/cat/db/: __init__.py  crud.py  database.py  models.py
src/cat/factory/: auth_handler.py  base.py  custom_auth_handler.py  defaults.py  embedder.py  factory.py  llm.py
src/cat/looking_glass/: callbacks.py  cheshire_cat.py  prompts.py  stray_cat.py
src/cat/mad_hatter/: mad_hatter.py  plugin.py  plugin_extractor.py  plugin_manifest.py  registry.py
src/cat/memory/: long_term_memory.py  memory_item.py  working_memory.py
src/cat/routes/: auth.py  auth_handler.py  base.py  chats.py  contexts.py  crud.py  embedder.py  home.py  llm.py  openapi.py  plugins.py  settings.py  status.py  users.py
src/cat/types/: __init__.py  __types_adapter.py  chats.py  content_block.py  contexts.py  messages.py  resource.py  text_content.py
tests/: conftest.py  test_cat_utils.py  test_env_variables.py  utils.py
tests/agents/: test_main_agent.py
tests/cache/: test_core_caches.py
tests/looking_glass/: test_cheshire_cat.py  test_stray_cat.py
tests/mad_hatter/: test_endpoints.py  test_hooks.py  test_mad_hatter.py  test_plugin.py  test_plugin_extractor.py
tests/memory/: test_class_working_memory.py
tests/mocks/mock_plugin/: mock_endpoint.py  mock_llm.py
tests/routes/: test_custom_endpoints.py  test_routes_base.py  test_session.py  test_websocket.py
tests/routes/auth/: test_auth_setting.py  test_available_permissions.py  test_env_api_key.py  test_jwt.py
tests/routes/embedder/: test_embedder_setting.py
tests/routes/llm/: test_llm_setting.py
tests/routes/memory/: test_working_memory.py
tests/routes/plugins/: test_plugin_settings.py  test_plugin_toggle.py  test_plugins_info.py  test_plugins_install_uninstall.py  test_plugins_registry.py
tests/routes/settings/: test_general_settings.py
tests/routes/static/: test_static.py
tests/routes/users/: test_users_crud.py  test_users_permissions.py
tmp_core_plugins/base_tools/: base_tools.py
tmp_core_plugins/langchain_models_pack/embedders/: custom.py
tmp_core_plugins/langchain_models_pack/llms/: configs.py
tmp_core_plugins/legacy_v1/: chat_history.py  convo.py
tmp_core_plugins/legacy_v1/tests/: test_legacy_session.py  test_legacy_working_memory.py
tmp_core_plugins/qdrant_vector_memory/: env.py  vector_memory.py  vector_memory_collection.py
tmp_core_plugins/qdrant_vector_memory/endpoints/: collections.py
tmp_core_plugins/qdrant_vector_memory/tests/: test_agent_memory.py  test_conf.py  test_memory_collection.py  test_memory_points.py
tmp_core_plugins/rabbit_hole/: endpoints.py  rabbit_hole.py  requirements.txt
tmp_core_plugins/white_rabbit/: white_rabbit.py
(+90 files in other folders)
