[project]
name = "cheshire-cat-ai"
description = "Production ready AI agent framework"
version = "2.0.4"
requires-python = ">=3.11"
license-files = ["LICENSE"]
authors = [
    { name = "Piero Savastano" },
    { name = "Cheshire Cat AI Contributors" },
]
dependencies = [
    "pydantic>=2.11.7",
    "uvicorn[standard]>=0.35.0",
    "fastapi[standard]>=0.115.14",
    "scalar-fastapi>=1.0.3",
    "websockets>=15.0",
    "PyJWT>=2.8.0",
    "bcrypt>=4.1.3",
    "pytz>=2025.2",
    "Jinja2>=3.1.4",
    "langchain-core>=0.3.74",
    "pillow>=11.3.0",
    "beautifulsoup4>=4.12.3",
    "pdfminer.six>=20221105",
    "unstructured>=0.12.6",
    "loguru>=0.7.2",
    "text_generation>=0.6.1",
    "tinydb>=4.8.0",
    "python-slugify>=8.0.1",
    "autopep8",
    "pylint",
    "perflint",
    "pylint-actions",
    "pytest",
    "pytest-asyncio",
    "httpx>=0.27.2",
    "rapidfuzz>=3.6.1",
    "ruff>=0.4.7",
    "aiofiles>=24.1.0",
    "fastmcp>=2.11.3",
    "asgi-lifespan>=2.1.0",
    "ag-ui-protocol>=0.1.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cat"]

[tool.uv]
package = true

[project.scripts]
# CLI
cat = "cat.main:main"


